Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Antonio Espinoza is a young professional who currently resides in the State of Texas. He has decided to leave his current profession of 12 years being a Maintenance Mechanic, to Software Engineer.</p>
